# shellmark

./: Cargo.toml  README.md
.github/workflows/: release.yml
integration/: s.fish  s.ps1  s.sh
src/: add.rs  bookmarks.rs  browse.rs  cli.rs  diag.rs  keys.rs  main.rs  plug.rs  search.rs  shell.rs  storage.rs
src/browse/: cmd.rs  ui.rs
