[package]
name = "shellmark"
version = "0.1.0"
authors = ["Artem Pyanykh <artem.pyanykh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
crossterm = {version = "0.19", features = ["event-stream"]}
futures = "0.3"
fuzzy-matcher = "0.3"
tokio = {version = "1.1", features = ["full"]}
tokio-stream = "0.1.2"
tui = {version = "0.14", default-features = false, features = ["crossterm"]}