[package]
name = "shellmark"
version = "0.1.1"
authors = ["Artem Pyanykh <artem.pyanykh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.5"
crossterm = {version = "0.19", features = ["event-stream"]}
derivative = "2.2"
directories = "3.0"
futures = "0.3"
fuzzy-matcher = "0.3"
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.1", features = ["full"]}
tokio-stream = "0.1.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
tui = {version = "0.14", default-features = false, features = ["crossterm"]}

[target.'cfg(windows)'.dependencies]
dunce = "1.0"